# Neurodefender

./: CODEOWNERS  CODE_OF_CONDUCT.md  DEMO_INSTRUCTIONS.md  ENHANCED_BACKEND_SUMMARY.md  INSTALL.md  LICENSE  LICENSE.md  README.md  README_TR.md  SECURITY.md  config.json  deploy-service.sh  index.html  install.ps1  install.sh  package-lock.json  package.json  requirements.txt  setup.sh  setup_ipds_v1.0.0.sh  vite.config.ts
src-tauri/: Cargo.toml  build.rs  py_engine.py  requirements.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/rules/: 1000001.json  1000003.json  1000004.json  1000005.json  1000006.json  1000007.json  1000008.json  1000009.json  1000010.json  1000011.json  1000012.json  1000013.json  1000014.json  1000015.json  1000016.json  1000017.json  1000018.json  1000019.json  1000020.json  1000021.json  1000022.json  1000023.json  1000024.json  1000025.json  1000026.json  1000027.json  1000028.json  1000029.json  1000030.json  1000031.json  1000032.json  1000033.json  1000034.json  1000035.json  1000036.json  1000037.json  1000038.json  1000039.json  1000040.json  1000041.json  (+19 more)
src-tauri/src/: config_manager.rs  lib.rs  main.rs  robustness.rs
src-tauri/src/api/: routes.rs
src-tauri/src/api/handlers/: alerts.rs  dashboard.rs  faq.rs  mod.rs  prevention.rs  reports.rs  settings.rs
src-tauri/src/capture/: analyzer.rs  mod.rs  packet.rs  pcap.rs
src-tauri/src/detection/: engine.rs  mod.rs  rules.rs  signatures.rs
src-tauri/src/detection/mlengine/: README.md  mlengine.rs  mod.rs  python_worker.rs
src-tauri/src/popup/: mod.rs
src-tauri/src/prevention/: README.md  actions.rs  blocker.rs  connection_tracker.rs  firewall.rs  mod.rs  rate_limiter.rs  threat_intelligence.rs
src-tauri/src/services/: alert_service.rs  auth_service.rs  mod.rs  monitor_service.rs  report_service.rs
src-tauri/src/storage/: db.rs  mod.rs
src-tauri/src/storage/models/: alert.rs  log.rs  mod.rs  report.rs  settings.rs  user.rs
src-tauri/src/storage/repositories/: alert_repo.rs  faq_repo.rs  mod.rs  (+3 more)
src-tauri/src/tray_module/: mod.rs  notifications.rs  tray_initializer.rs
src-tauri/src/utils/: config.rs  error.rs  logger.rs  mod.rs
(+98 files in other folders)
