[package]
name = "neurodefender"
version = "0.1.0"
description = "A Multiplatform Intrusion Detection and Prevension System"
authors = ["uaytug"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neurodefender_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
vergen = { version = "8.2.1", features = ["build", "cargo", "rustc", "si"] }

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = { version = "2.3.0" }
tauri-plugin-opener = "2.2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = { version = "4.3", features = ["macros", "compress-brotli", "compress-gzip", "openssl"] }
actix-rt = "2.8"
actix-cors = "0.6"
jsonwebtoken = "8.3"
bcrypt = "0.14"
mongodb = "2.5"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
config = "0.13"
dotenv = "0.15"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
futures = "0.3.31"
pcap = "0.10"
etherparse = "0.13"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.8"
rand = "0.8.5"
gethostname = "1.0.1"
clap = { version = "4.5.37", features = ["derive"] }
pyo3 = { version = "0.25", features = ["auto-initialize"] }
pnet = "0.35.0"
sysinfo = "0.30.12"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
num_cpus = "1.16"
toml = "0.8"
notify = "6.1"

# Added for SSE
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures-util = "0.3"
actix-web-lab = "0.18"
tauri-plugin-shell = "2"

[features]
default = ["serde"]
serde = ["serde/derive"]
